# neuralink-compression-challenge-solution

./: .gitignore  CMakeLists.txt  Makefile  README.md  verify.ps1
include/: decode.h  encode.h
python/: README.md  experiments.py  requirements.txt
python/utilities/: WavFile.py  __init__.py
src/: decode.cpp  encode.cpp  main_decode.cpp  main_encode.cpp
